<resources>
    <string name="app_name">Coinz</string>
    <string name="title_activity_main">Coinz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out_btn_text">Sign Out</string>
    <string name="action_settings">Settings</string>
    <string name="blind_mode">Coinz Listing</string>
    <string name="upgrade_screen">Upgrades/Traps</string>
    <string name="map_screen">Map</string>
    <string name="shop_screen">Shop</string>
    <string name="banking_screen">Bank</string>
    <string name="friends_screen">Send Coinz</string>
    <string name="leaderboard_screen">Leaderboard</string>

    <string name="shil_conversion">SHIL/GOLD: </string>
    <string name="dolr_conversion">DOLR/GOLD: </string>
    <string name="quid_conversion">QUID/GOLD: </string>
    <string name="peny_conversion">PENY/GOLD: </string>

    <string name="preference_file_key">com.cameronmacleod.coinz.db</string>
    <string name="coinz_map_key">coinzmap</string>

    <string name="no_geojson_toast">Couldn\'t get map data. Please try again.</string>

    <string name="location_explanation">
        To collect coinz you will need to enable location. Coinz are collected by standing near to
        them, so this app will need to know your location. Please enable location in the following
        screen.
    </string>

    <string name="coin_collected_text">Coin collected!</string>
    <string name="coin_limit_reached_text">Can\'t collect any more coinz today!</string>

    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <string name="send_friend_message">Please enter a friend\'s email address below to send your coin to them.</string>

    <string name="send_friend_title">Send a coin to a friend</string>

    <string name="friend_email_hint">Friend\'s email</string>

    <string name="no_friend_found">No friend found for that email address. Please try again!</string>

    <string name="send_coin_to_self">You can\'t send a coin to yourself!</string>
    <string name="coin_send_success">Coin sent!</string>

    <string name="no_spare_change">You have no spare coins to send!</string>

    <string name="map_upgrade_title">Map</string>
    <string name="map_upgrade_description">
        Frustrated at only seeing 4 coinz at a time? The map upgrade enables you to see them all at once
        alongside your own location! Use this to collect more coinz faster.
    </string>
</resources>
