<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shil_conversion_label"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/shil_conversion"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/shil_conversion_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dolr_conversion_label"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/dolr_conversion"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/dolr_conversion_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/quid_conversion_label"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/quid_conversion"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/quid_conversion_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/peny_conversion_label"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/peny_conversion"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/peny_conversion_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/nearestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="Nearest four coins"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/nearestFourCoins"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/nearestTitle"
        app:layout_constraintEnd_toEndOf="parent">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btnGoToShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="108dp"
        android:onClick="onShopButtonClicked"
        android:text="Go to shop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="top"
        android:text="Not enough information?"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToShop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearestFourCoins"
        app:layout_constraintVertical_bias="0.921" />

</android.support.constraint.ConstraintLayout>